--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ django-cors-headers = "^3.4.0"
 psycopg2-binary = "^2.8.5"
 djangorestframework-simplejwt = "^4.4.0"
 djangorestframework_simplejwt = "^4.4.0"
+django-environ = "^0.4.5"
 
 [tool.poetry.dev-dependencies]
 black = "^19.10b0"
